# brainX

./: .gitignore  README.md  brainx-backend.spec  requirements.txt
.github/workflows/: release.yml
apps/api/: main.py  sidecar_main.py
apps/api/routes/: documents.py  feedback.py  graph.py  health.py  ingest.py  interactions.py  query.py
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md  brainx-backend-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: main-window.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: chat.ts  client.ts  graph.ts  ingest.ts  system.ts
apps/desktop/src/app/: App.tsx  providers.tsx  router.tsx
apps/desktop/src/hooks/: useChat.ts  useGraph.ts  useIngest.ts  useKeyboardShortcuts.ts  useLocalStorage.ts
apps/desktop/src/store/: chatStore.ts  graphStore.ts  index.ts  ingestStore.ts  uiStore.ts
apps/desktop/src/styles/: animations.css  main.css  reset.css  tokens.css  typography.css
apps/desktop/src/types/: api.ts  chat.ts  graph.ts  ingest.ts
apps/desktop/src/utils/: format.ts  graph.ts
docs/: backend_sidecar.md  frontend_architecture.md  release_checklist.md  updater.md
scripts/: build_backend_sidecar.sh  run_backend_dev.sh
scripts/dev/: check_health.py  feedback_sample.py  ingest_sample.py  query_sample.py  trace_sample.py
tests/fixtures/docs/: auth_notes.md  project_plan.md  rust_performance.txt
(+62 files in other folders)
