[package]
name = "brainx-desktop"
version = "0.1.0"
description = "brainX local-first desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "brainx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
